# wzhu_utils

./: .editorconfig  .gitignore  build-nvidia-driver.sh  collect-system-info.sh  compare-system-info.sh  config-boot-entry.sh  config-develop-system.sh  config-graphics-env-over-ssh.sh  config-profiling-system.sh  create-screenshot.sh  install-certificate.sh  install-nvidia-driver.sh  install-pkg.sh  list-login-session.sh  nvidia-build-driver.sh  nvidia-install-driver.sh  nvidia-share-desktop.sh  nvidia-start-gnome.sh  nvidia-start-xorg.sh  nvidia-vpn.sh  print-ascii-tree.sh  send-hotkey.sh  share-desktop.sh
.cursor/rules/: c-code-formatting-style.mdc  c-code-style.mdc
profiling/: bpftrace-offcpu.bt  collect-system-info.sh  draw-polylines-in-html.py  dynamic-monitoring.sh  generate-flamegraph-offcpu.sh  generate-flamegraph.sh  offcpu-wait-reasons.sh  offcpu-wait-wake-graph.sh  offcpu-waitgraph.sh  oncpu-flamegraph.sh  trace-wakers-bpftrace.bt
profiling/common/: collect-system-info.sh
profiling/offcpu/: INVESTIGATE_WAITS.md  run-offcpu-profiling.sh  trace-wakers-bpftrace.bt
profiling/oncpu/: collect-system-info.sh  flamegraph-report-template.html  generate-html-report.sh  generate-perthread-flamegraph.sh  perf-record-and-postprocess.sh  run-oncpu-profiling-nsight.sh  run-oncpu-profiling.sh  run.sh
profiling/utils/: collect-system-info.sh  draw-polylines-in-html.py
testcase/: microbench.sh  steam-strangebrigade.sh  strangebrigade.sh  viewperf2020v3.sh
testcases/: microbench.sh  strangebrigade.sh
vulkanhooks/: .clangd  CMakeLists.txt
vulkanhooks/layers/: VkLayer_wzhu_profiling.json  VkLayer_wzhu_profiling.json.in
vulkanhooks/scripts/: uninstall-wzhu-profiling-layer.sh
vulkanhooks/src/: config.cpp  config.h  dump_hooked_api.cpp  dump_hooked_api.h  hook_device.cpp  hook_device.h  hook_dispatch.cpp  hook_dispatch.h  hook_instance.cpp  hook_instance.h  l  layer.cpp  layer_entry_points.cpp  layer_log.cpp  layer_log.h  utils_device.cpp  utils_device.h  wzhu_hooks.h
vulkanhooks/src/layer_core/: wzhu_dispatch_types.h  wzhu_layer.cpp  wzhu_layer.h  wzhu_layer_dispatch.cpp  wzhu_layer_dispatch.h
vulkanhooks/src/utils/: wzhu_timing_statistics.cpp  wzhu_timing_statistics.h
